# puda-logger

./: .gitignore  README.md
influxdb-logger/: .env.example  Dockerfile  README.md  compose.influxdb.yml  compose.yml  main.py  pyproject.toml
influxdb/logger/: .env.example  Dockerfile  README.md  compose.yml  docker-entrypoint.sh  main.py  telegraf.conf.template
influxdb/logger/test/: publish-samples.sh  telegraf.test.conf
influxdb/server/: .env.example  compose.yml
livestream/: .env  .env.example  README.md  compose.yml  entrypoint.sh  mediamtx-base.yml  mediamtx.yml
nats/: .env.example  Dockerfile  compose.yml  db_client.py  init.sql  main.py  pyproject.toml
nats/tests/: pyproject.toml  test_db_connection.py
postgres-logger/: README.md  compose.yml  db_client.py  pyproject.toml
postgres/logger/: .env.example  Dockerfile  README.md  compose.yml  main.py  pyproject.toml
postgres/logger/tests/: pyproject.toml
postgres/server/: .env.example  compose.yml
